--- a/src/donate.html
+++ b/src/donate.html
@@ -74,7 +74,7 @@
         </div>
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             //侧边栏运行
             // 重置侧边栏禁止点击状态
