--- a/src/header.html
+++ b/src/header.html
@@ -13,12 +13,454 @@
     <img src="images/logo2.png" alt="" class="moveLogo">
     <button></button>
     <div class="login fr">登录我的图书馆</div>
-    <ul class="clearfix fr">
-        <li id="navigation_1"><a href="Index.html">概况</a></li>
-        <li class=" activing" id="navigation_2"><a href="mylibray.html">资源</a></li>
-        <li id="navigation_3"><a href="news.html">借阅服务</a></li>
-        <li id="navigation_4"><a href="#">学习支持</a></li>
-        <li id="navigation_5"><a href="#">科研支持</a></li>
-        <li id="navigation_6"><a href="#">阅读与活动</a></li>
+    <ul class='pc'>
+        <li>概况
+            <div class="content-item clearfix">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </li>
+        <li>资源
+            <div class="content-item">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+                    <div class="item">
+                        <h3><a href="#">资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li>借阅服务
+            <div class="content-item">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </li>
+        <li>学习支持
+            <div class="content-item">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </li>
+        <li>科研支持
+            <div class="content-item">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li>阅读与活动
+            <div class="content-item">
+                <div class="img-left">
+                    <img src="images/books/book (2).png" alt="">
+                </div>
+                <div class="fl flex-box" id="brand-waterfall">
+
+                    <div class="item">
+                        <h3><a href="#">新到资源</a> </h3>
+                        <ul class="clearfix">
+                            <li> <a href="#">全文期刊数据库</a> </li>
+                            <li> <a href="#">电子期刊导航</a> </li>
+                            <li> <a href="#">馆藏纸本期刊分布</a> </li>
+                            <li> <a href="#"> 纸本期刊电子版</a></li>
+                            <li> <a href="#">CALIS外文期刊网</a> </li>
+                            <li> <a href="#">核心期刊查询</a> </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </li>
     </ul>
+    <div class="navSub">
+        <div class="tabLan">
+            <div class="subNav" data-fid='0'>新手上路</div>
+            <ul class="navContent ">
+                <li><a href="#" data-sid="0">新生入门PPT（配音版）</a>
+                    <div class="third">
+                        <div class="thd-item"><a href="#">新生1</a></div>
+                        <div class="thd-item"><a href="#">新生1</a></div>
+                        <div class="thd-item"><a href="#">新生1</a></div>
+                    </div>
+                </li>
+                <li><a href="#" data-sid="1">使用电子资源</a>
+                    <div class="third">
+                        <div class="thd-item"><a href="#">新生1</a></div>
+                    </div>
+                </li>
+                <li><a href="#" data-sid="2">借阅权限</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid='1'>上网/自习/研修</div>
+            <ul class="navContent">
+                <li><a href="#" data-sid="0">图书馆上网</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="1">自习场所</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="2">研修室预约</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid='2'> 失物招领</div>
+            <ul class="navContent">
+                <li><a href="#" data-sid="0">失物招领</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="1">寻物启事</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="2">使用说明</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="3">管理员登陆</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid='3'> 校外访问</div>
+            <ul class="navContent">
+                <li><a href="#" data-sid="0">访问须知</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="1">访问方式</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="2">上网方式的确认</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="3">浏览器代理设置</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="4">定制版浏览器下载</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="5">校外访问注意事项</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="6">校外访问FAQ</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid="4"> 移动图书馆</div>
+            <ul class="navContent">
+
+            </ul>
+            <div class="subNav" data-fid='5'> 自助服务</div>
+            <ul class="navContent">
+                <li><a href="#" data-sid="0">自助借书</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="1">自助还书</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="2">自助文印</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="3">座位预约</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="4">自助存包</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="5">自助刷卡选号上机</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="6">电子图书借阅机</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="7">高拍仪</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="8">其它自助设备</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid='6'> 学习中心</div>
+            <ul class="navContent">
+
+            </ul>
+            <div class="subNav" data-fid='7'> 工具与软件</div>
+            <ul class="navContent">
+                <li><a href="#" data-sid="0">数据库校外访问浏览器定制版</a></li>
+                <li><a href="#" data-sid="1">自助服务软件</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="2">电子阅读软件</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="3">数据库客户端安装软件</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="4">个人参考文献管理工具</a>
+                    <div class="third"></div>
+                </li>
+                <li><a href="#" data-sid="5">统计软件</a>
+                    <div class="third"></div>
+                </li>
+            </ul>
+            <div class="subNav" data-fid='8'> 图书分类查询</div>
+            <ul class="navContent">
+
+            </ul>
+            <div class="subNav" data-fid='9'> 常见问题解答（FAQ）</div>
+            <ul class="navContent">
+
+            </ul>
+        </div>
+    </div>
 </div>
