--- a/src/help.html
+++ b/src/help.html
@@ -168,7 +168,7 @@
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             //初次进来加载相应的文件
             function myFunction(x) {
