--- a/src/helpDetail.html
+++ b/src/helpDetail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>帮助中心</title>
+    <link rel="stylesheet" href="plugin/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen and (max-width:1200px)" href="plugin/css/mobileReset.css">
     <link rel="stylesheet" media="screen and (min-width:1200px)" type="text/css" href="plugin/css/reset.css" />
     <link rel="stylesheet" media="screen and (max-width:1200px)" type="text/css" href="styles/mobileHelpDetail.css" />
@@ -100,7 +101,7 @@
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             function myFunction(x) {
                 // 当页面进来时根据屏幕大小加载js文件并移除不需要的js文件
