--- a/src/news.html
+++ b/src/news.html
@@ -91,7 +91,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="plugin/js/pagination.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             $(document).ready(function() {
                 //jquery load方法加载公共头部
