--- a/src/newsDetail.html
+++ b/src/newsDetail.html
@@ -90,7 +90,7 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             $(document).ready(function() {
                 //jquery load方法加载公共头部
