--- a/src/serve.html
+++ b/src/serve.html
@@ -208,7 +208,7 @@
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             var uid, fid;
             //侧边栏运行
