--- a/src/serveDetail.html
+++ b/src/serveDetail.html
@@ -118,7 +118,7 @@
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
+    <script id='jsCode'>
         $(function() {
             var fid, sid;
             var navList = $('.navContent')
